[package]
name = "acty"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used             = "deny"   # no `.unwrap()`; handle Option/Result or propagate with `?`
expect_used             = "deny"   # `.expect()` is a labeled panic, still denied
panic                   = "deny"   # no explicit `panic!()` in production code
default_trait_access    = "warn"   # prefer T::default() over Default::default()
mod_module_files        = "deny"   # Prefer Rust 2018 module roots: src/foo.rs
dbg_macro               = "warn"   # no leftover `dbg!()` in committed code
